--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,7 +7,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Emmanuel Koffi AHIABOR</h1>
-						<p>Développeur Web&nbsp;&bull;&nbsp; Graphiste &nbsp;&bull;&nbsp; Vidéaste</p>
+						<p>Web Developer&nbsp;&bull;&nbsp; Graphic Designer</p>
 						<nav>
 							<ul>
                 <li><a href="https://github.com/AHIABOREmmanuel" class="icon brands fa-github"><span class="label">Github</span></a></li>
