--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,6 +10,7 @@
 						<p>Web Developer&nbsp;&bull;&nbsp; Graphic Designer</p>
 						<nav>
 							<ul>
+                <li><a href="https://ledeveloppeurcreatif.netlify.app/"  class="fa-solid fa-user"><span class="label">Portfolio</span></a></li>
                 <li><a href="https://github.com/AHIABOREmmanuel" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/koffi-emmanuel-ahiabor-4b2a1a253?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="icon brands fa-linkedin">
                   <span class="label">LinkedIn</span></a></li>
