Ajout du lien vers le portfolio ledéveloppeurcréatif

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -6,11 +6,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Emmanuel Koffi AHIABOR</h1>
+						<h1>Ledéveloppeurcréatif</h1>
+						<h3>Emmanuel Koffi AHIABOR</h3>
 						<p>Web Developer&nbsp;&bull;&nbsp; Graphic Designer</p>
 						<nav>
 							<ul>
                 <li><a href="https://ledeveloppeurcreatif.netlify.app/"  class="fa-solid fa-user"><span class="label">Portfolio</span></a></li>
+                <li><a href="https://vercel.com/emmanuel-ahiabors-projects"  class="fa-solid fa-house"><span class="label">Portfolio</span></a></li>
                 <li><a href="https://github.com/AHIABOREmmanuel" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/koffi-emmanuel-ahiabor-4b2a1a253?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="icon brands fa-linkedin">
                   <span class="label">LinkedIn</span></a></li>
