Mis à jour du 01/07/2025

--- a/public/assets/sass/libs/_vars.scss
+++ b/public/assets/sass/libs/_vars.scss
@@ -4,14 +4,14 @@
 		bg-width:			1500px
 	);
 
-// Duration.
+/* Duration.
 	$duration: (
 		bg:					60s,
 		wrapper:			3s,
 		overlay:			1.5s,
 		header:				1s,
 		nav-icons:			0.5s
-	);
+	);*/
 
 // Size.
 	$size: (
