--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -195,7 +195,7 @@ input, select, textarea {
 			opacity: 1;
 		}
 	}
-
+/*
 	#wrapper {
 		-moz-animation: wrapper 3s forwards;
 		-webkit-animation: wrapper 3s forwards;
@@ -207,15 +207,15 @@ input, select, textarea {
 		position: fixed;
 		top: 0;
 		width: 100%;
-	}
+	} */
 
 /* BG */
 
 	#bg {
-		-moz-animation: bg 60s linear infinite;
+		/* -moz-animation: bg 60s linear infinite;
 		-webkit-animation: bg 60s linear infinite;
 		-ms-animation: bg 60s linear infinite;
-		animation: bg 60s linear infinite;
+		animation: bg 60s linear infinite; */
 		-moz-backface-visibility: hidden;
 		-webkit-backface-visibility: hidden;
 		-ms-backface-visibility: hidden;
