--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,7 +8,7 @@
 					<header id="header">
 						<h1>Ledéveloppeurcréatif</h1>
 						<h3>Emmanuel Koffi AHIABOR</h3>
-						<p>Web Developer&nbsp;&bull;&nbsp; Graphic Designer </p>
+						<p>Web Developer&nbsp;&bull;&nbsp; Digital Strategist </p>
 						<nav>
 							<ul>
                 <li><a href=""  class="fa-solid fa-user"><span class="label">Portfolio</span></a></li>
